# UnKwon-Shop

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  manage.py  pyproject.toml
apps/common/: permissions.py  serializers.py  urls.py  views.py
apps/fixtures/: products.json  users.json  wish_list.json
apps/products/: models.py  serializers.py  tests.py  urls.py  views.py
apps/products/migrations/: 0001_initial.py  0002_alter_product_sku.py  0003_alter_product_table.py
apps/users/: backend.py  models.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_alter_user_managers_user_date_joined_user_groups_and_more.py  0003_alter_user_is_active.py
apps/wish_list/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/wish_list/migrations/: 0001_initial.py  0002_remove_wishlist_created_at_and_more.py
config/: settings.py  urls.py
docker/: docker-compose.test.yml  docker-compose.yml
